Added 04-16 team meeting notes and assignment Notion pages

--- a/admin/notes/team/04-16.md
+++ b/admin/notes/team/04-16.md
@@ -1,30 +1,66 @@
-# TA Meeting Notes
-## April 16, 2025, 3:00pm
-### Attendees: Shelby Myraman, Yuan-Kai "Kevin" Yang
+# 2nd General Meeting (3rd week, Wednesday April 16)
 
-### Agenda Items
-* Proper empty directory file structure for repos
-  * Don't use "empty.txt", instead use an empty ".gitkeep" instead
-  * More similar to industry standards
-* Meeting Notes
-  * Will be evaluated indirectly in terms of grad
-    * It's a way to track the team's progress
-  * Start using the [cse110-sp25-group25](https://github.com/cse110-sp25-group25/cse110-sp25-group25/) repo to store meeting notes
-    * Have them in markdown, best industry practice
-  * Shelby will not be able to take Notion pages into consideration when grading
-* Advice for Current Assignment
-  * Common mistake for developers is not consistently pushing a few lines of code
-    * When developers hoard their code, it makes the merge conflict issue at the end terrible
-  * Try using the project boards feature on GitHub
-    * Put issues on there, use timelines (i.e. Gantt Chart)
-    * Create one project board for the warmup project
-    * Create one project board for the final project
-  * **Most Important Component** of this assignment is the SWOT Analysis
-    * Helps team leads assess the state of the team and figure out weaknesses
-      * Ex: if someone is not comfortable with HTML/CSS, we need to work with them to get them more comfortable with it
-      * Ex: if someone is very adamant about using ChatGPT code that they don't fully understand, we need to have a conversation with them
-* New Member
-  * 12th member has not gotten back to Shelby and has missed a few assignments now
-  * Unsure about their status, will be contacting by next week
+---
 
-## Meeting Adjourned: 3:20pm
+# 📝 **CSE 110 – Weekly Team Meeting Agenda**
+
+📅 **When:** Wednesday @ 8:00 PM
+
+📍 **Where:** Zoom / Discord / In-Person (decide as a team)
+
+🗓️ **Recurring:** Add to Google Calendar as **weekly recurring meeting**
+
+---
+
+## 🧠 **Main Agenda (All Hands)**
+
+**Duration:** ~15–20 minutes
+
+1. ✅ Quick Status Check
+    - Any blockers or confusion with the assignment?
+    - Confirm everyone is on the same page with timeline
+2. 📦 Assignment Breakdown
+    - Go over **Level 1 – Card Flip/Shuffle Component**
+    - Review repo setup, file structure, and GitHub use
+3. 👥 Sub-Team Split
+    - **Frontend Submeeting (Lead: Kevin)**
+        - Review Figma
+        - Start building card layout, animations
+    - **Backend Submeeting (Lead: Evan)**
+        - Setup Web Component structure (`card.js`)
+        - Attribute binding + flip logic
+
+---
+
+## 🚀 **Sub-Meetings (Frontend + Backend Work Time)**
+
+**Duration:** ~30–60 minutes
+
+### 🔷 Frontend Team Tasks
+
+- Finalize Figma design
+- Start on card markup and styling
+- Plan CSS flip animation
+
+### 🔶 Backend Team Tasks
+
+- Create `playing-card` Web Component
+- Add props (`suit`, `rank`)
+- Implement basic JS flip logic
+
+---
+
+## 💡 **Final Project Brainstorm (Optional)**
+
+- Quick roundtable: what kind of app would be cool?
+- Collect ideas: AI + web tools, task managers, games, trackers, etc.
+- No need to finalize, just get the creativity flowing
+
+---
+
+## ✅ **Action Items Before Saturday**
+
+- Frontend: Rough design + basic card visuals done
+- Backend: Web Component logic started + tested
+- Everyone: Push your work + open issues on GitHub
+- Assign someone to record YouTube demo this weekend
