Uploaded 05-12.md and added meeting info to all meeting notes

--- a/admin/meetings/team/04-16.md
+++ b/admin/meetings/team/04-16.md
@@ -1,16 +1,15 @@
-# 2nd General Meeting (3rd week, Wednesday April 16)
+# 2nd General Meeting (04/16)
 
 ---
 
-# 📝 **CSE 110 – Weekly Team Meeting Agenda**
+## Meeting Info
 
-📅 **When:** Wednesday @ 8:00 PM
-
-📍 **Where:** Zoom / Discord / In-Person (decide as a team)
-
-🗓️ **Recurring:** Add to Google Calendar as **weekly recurring meeting**
+- 📅 **Date:** 04/16/2025
+- ⏰ **Time:** 8:00pm - 9:00 pm
+- 📍 **Location:** Zoom
 
 ---
+
 
 ## 🧠 **Main Agenda (All Hands)**
 
