--- a/admin/meetings/team/05-01.md
+++ b/admin/meetings/team/05-01.md
@@ -1,10 +1,10 @@
-# Initial Final Project Meeting (May 1, 2025)
+# Initial Final Project Meeting (05/01)
 
 ---
 
 ## Meeting Info
 
-- 📅 **Date: 05**/01/2025
+- 📅 **Date:** 05/01/2025
 - ⏰ **Time:** 09:08 am to 10:06 pm
 - 📍 **Location:** Zoom
 - 👥 **Attendees:** Evan, Kevin, Cass, Joshua, Kalkin, Kate, Thomas, Harry
