--- a/admin/meetings/team/05-06.md
+++ b/admin/meetings/team/05-06.md
@@ -1,10 +1,16 @@
-# Meeting Notes (May 5)
+# Team Meeting Notes (05/05)
 
-attendees = Kalkin, Cass, Harry, Kate, Thomas, Evan, Kevin
+---
 
-start at = 8:10
+## Meeting Info
 
-ends at = 8:30
+- 📅 **Date:** 05/05/2025
+- ⏰ **Time:** 8:10pm - 8:30 pm
+- 📍 **Location:** Zoom
+- 👥 **Attendees:** Kalkin, Cass, Harry, Kate, Thomas, Evan, Kevin
+
+---
+
 
 # Goals for today =
 
