update to 200 restaurants

--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
    "source": [
     "LATITUDE  = 32.8801                         # UC-San Diego (Geisel Library)\n",
     "LONGITUDE = -117.2340\n",
-    "RADIUS_M  = 4000     \n",
+    "RADIUS_M  = 10000     \n",
     "HEADERS = {\"Authorization\": f\"Bearer {API_KEY}\"}\n",
     "SEARCH_URL = \"https://api.yelp.com/v3/businesses/search\"\n",
     "DETAIL_URL = \"https://api.yelp.com/v3/businesses/{}\"\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,18 +68,28 @@
     "    return f\"Open until {hh}:{mm} {suffix}\"\n",
     "\n",
     "\n",
-    "def fetch_restaurants(limit: int = 500) -> List[Dict]:\n",
-    "    params = {\n",
-    "        \"latitude\":  LATITUDE,\n",
-    "        \"longitude\": LONGITUDE,\n",
-    "        \"radius\":    RADIUS_M,     \n",
-    "        \"categories\": \"restaurants\",\n",
-    "        \"limit\": limit,\n",
-    "        \"sort_by\": \"rating\",\n",
-    "    }\n",
-    "    resp = requests.get(SEARCH_URL, headers=HEADERS, params=params)\n",
-    "    resp.raise_for_status()\n",
-    "    return resp.json().get(\"businesses\", [])\n",
+    "def fetch_restaurants(max_results: int = 200) -> List[Dict]:\n",
+    "    out, fetched = [], 0\n",
+    "    while fetched < max_results:\n",
+    "        batch_size = min(50, max_results - fetched)          # Yelp’s per-call cap\n",
+    "        params = {\n",
+    "            \"latitude\": LATITUDE,\n",
+    "            \"longitude\": LONGITUDE,\n",
+    "            \"radius\": RADIUS_M,\n",
+    "            \"categories\": \"restaurants\",\n",
+    "            \"limit\": batch_size,\n",
+    "            \"offset\": fetched,\n",
+    "            \"sort_by\": \"rating\",\n",
+    "        }\n",
+    "        resp = requests.get(SEARCH_URL, headers=HEADERS, params=params)\n",
+    "        resp.raise_for_status()\n",
+    "        items = resp.json()[\"businesses\"]\n",
+    "        if not items:\n",
+    "            break\n",
+    "        out.extend(items)\n",
+    "        fetched += len(items)\n",
+    "    return out\n",
+    "\n",
     "\n",
     "\n",
     "def build_entry(biz: Dict, idx: int) -> Dict:\n",
@@ -120,30 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "HTTPError",
-     "evalue": "400 Client Error: Bad Request for url: https://api.yelp.com/v3/businesses/search?latitude=32.8801&longitude=-117.234&radius=4000&categories=restaurants&limit=500&sort_by=rating",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m raw \u001b[38;5;241m=\u001b[39m \u001b[43mfetch_restaurants\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[10], line 29\u001b[0m, in \u001b[0;36mfetch_restaurants\u001b[0;34m(limit)\u001b[0m\n\u001b[1;32m     20\u001b[0m params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlatitude\u001b[39m\u001b[38;5;124m\"\u001b[39m:  LATITUDE,\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlongitude\u001b[39m\u001b[38;5;124m\"\u001b[39m: LONGITUDE,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msort_by\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrating\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     27\u001b[0m }\n\u001b[1;32m     28\u001b[0m resp \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(SEARCH_URL, headers\u001b[38;5;241m=\u001b[39mHEADERS, params\u001b[38;5;241m=\u001b[39mparams)\n\u001b[0;32m---> 29\u001b[0m \u001b[43mresp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m resp\u001b[38;5;241m.\u001b[39mjson()\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbusinesses\u001b[39m\u001b[38;5;124m\"\u001b[39m, [])\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/cogs118a/lib/python3.12/site-packages/requests/models.py:1024\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1019\u001b[0m     http_error_msg \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m   1020\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstatus_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Server Error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mreason\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m for url: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1021\u001b[0m     )\n\u001b[1;32m   1023\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[0;32m-> 1024\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
-      "\u001b[0;31mHTTPError\u001b[0m: 400 Client Error: Bad Request for url: https://api.yelp.com/v3/businesses/search?latitude=32.8801&longitude=-117.234&radius=4000&categories=restaurants&limit=500&sort_by=rating"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "raw = fetch_restaurants()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
