--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -103,6 +103,7 @@
     "    cuisine = detail[\"categories\"][0][\"title\"] if detail.get(\"categories\") else \"\"\n",
     "    neigh = detail[\"location\"].get(\"neighborhoods\") or []\n",
     "    location = neigh[0] if neigh else detail[\"location\"].get(\"city\", \"San Diego\")\n",
+    "    address = \", \".join(detail[\"location\"].get(\"display_address\", []))\n",
     "\n",
     "    entry = {\n",
     "        \"id\": idx,\n",
@@ -112,6 +113,7 @@
     "        \"distance\": miles,\n",
     "        \"rating\": detail[\"rating\"],\n",
     "        \"location\": location,\n",
+    "        \"address\": address,\n",
     "        \"phone\": detail.get(\"display_phone\", \"\"),\n",
     "        \"hours\": _close_str(detail),\n",
     "        \"image\": detail.get(\"image_url\", \"\"),\n",
