--- a/admin/meetings/team/05-01.md
+++ b/admin/meetings/team/05-01.md
@@ -1,110 +1,119 @@
-# Initial Final Project Meeting (05/01)
+#  Initial Final Project Meeting — 05/01/2025
 
 ---
 
-## Meeting Info
+##  Meeting Info
 
-- 📅 **Date:** 05/01/2025
-- ⏰ **Time:** 09:08 am to 10:06 pm
-- 📍 **Location:** Zoom
-- 👥 **Attendees:** Evan, Kevin, Cass, Joshua, Kalkin, Kate, Thomas, Harry
+* **Date:** May 1, 2025
+* **Time:** 9:08 AM – 10:06 AM
+* **Location:** Zoom
+* **Attendees:** Evan, Kevin, Cass, Joshua, Kalkin, Kate, Thomas, Harry
 
 ---
 
-## 📢 Announcments
+##  Announcements
 
-- Project was approved!
+*  **Project approved!**
 
 ---
 
 ## ✏️ Agenda
 
-- **Feedback and Evaluation**
-    - Share Shelby's feedback: (**use a database instead of external API, not using electron, etc )**
-    - Feedback and improvement about our first project (blackjack)
-- 🛠 **Project Alignment Discussion**:
-    - Review MVP scope: what's critical vs optional
-    - Confirm roadmap from Week 5–10
-    - Assign roles
-- **Breakout rooms (designers and developers):**
-    - Discuss the task for each team
+* **Feedback & Evaluation**
 
-# Feedback and Evaluation
+  * Discuss Shelby’s feedback (e.g., use a database instead of an external API, avoid using Electron, etc.)
+  * Reflect on improvements since the Blackjack project
+* **Project Alignment Discussion**
 
-- Share Shelby's feedback: **(use a database instead of external API, not using electron, etc ) (Kevin’s notes)**
-- Feedback and improvement about our first project (blackjack):
-    - (changing from frontend and backend to designer and devs)
+  * Define MVP scope: What’s essential vs optional
+  * Confirm project roadmap (Weeks 5–10)
+  * Assign team roles
+* **Breakout Rooms (Designers & Developers)**
 
-# Project Alignment Discussion
+  * Team-specific task planning
 
-### MVP
+---
 
-- Card Collection Page
-- Tinder Swiping
-- Landing Page
-- Filters for Restaurant
+## 🗣️ Feedback & Evaluation
 
-## Roadmap
+* Shelby's feedback (via Kevin’s notes):
 
-| **Week** | **Designers** | **Developers** |
-| --- | --- | --- |
-| **Week 5** | 🔍 Brainstorm & evaluate current designIdentify gaps, gather team feedback | 🧠 Review current designsBrainstorm implementation approach Understand Shelby’s feedback (DB over API) |
-| **Week 6** | 🎨 Finalize landing page + restaurant filter form |  |
-| Define layout, input styling, visual components | 🏗️ Set up database & file structure |  |
-| Build initial components based on finalized designs |  |  |
-| Implement landing & nav bar |  |  |
-| **Week 7** | 🎨 Design Tinder-style swipe UIDesign card detail (expanded view) | 💻 finalize the landing page design |
-| Build the filters/form interaction logic |  |  |
-| **Week 8** | 🎨 Design “all cards” / deck view screenFinalize interaction states (empty, saved, no match) | 💻 Code Tinder-style feature and card detail modal |
-| Hook up the check/no/save buttons functions to local DB |  |  |
-| **Week 9** | 🪞 Final design polish Refinements based on internal feedback | 🧩 Build "all cards/deck" view |
-| Test navigation and data consistency |  |  |
-| **Week 10** | 🎨 Final QA, tweaks, accessibility checks | 🐞 Bug fixes and polish |
-| UX improvements, cleanup, code freeze |  |  |
+  * Use a database instead of an external API
+  * Do not use Electron
+* Lessons from the Blackjack project:
 
-### Roles
+  * Shift roles from "frontend/backend" to "designers/developers"
 
-- Developers (7 people)
-- Designers (3 people)
-- Kevin and Evan will be more involved in the tasks and looking through code
+---
 
-## Breakout Room (designer and dev):
+##  Project Alignment Discussion
 
-### Developer Breakout Room
+###  MVP Features
 
-(feedback and improvement from our current design and feature)
+* Card Collection Page
+* Tinder-Style Swiping
+* Landing Page
+* Restaurant Filters
 
-overall =
+---
 
-- design mobile device too
+## 🛣 Roadmap
 
-landing page =
+| **Week**    | **Designers**                                                                                       | **Developers**                                                                                  |
+| ----------- | --------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------- |
+| **Week 5**  | Brainstorm & evaluate design gaps<br>Gather team feedback                                           | Review current design<br>Plan implementation<br>Incorporate Shelby's feedback                   |
+| **Week 6**  | Finalize landing page + restaurant filter form<br>Define layout & visual components                 | Set up database and file structure<br>Build initial components<br>Implement landing and nav bar |
+| **Week 7**  | Design Tinder-style UI and card detail (expanded view)<br>Build filter/form logic                   | Finalize landing page implementation                                                            |
+| **Week 8**  | Design "All Cards" / Deck View screen<br>Finalize interaction states (e.g., empty, saved, no match) | Implement Tinder swipe logic and card modal<br>Connect action buttons to local DB               |
+| **Week 9**  | Final polish and refinements based on feedback                                                      | Build Deck View page<br>Test navigation and data handling                                       |
+| **Week 10** | Final QA, accessibility tweaks, design cleanup                                                      | Bug fixes, polish, and final code freeze                                                        |
 
-- first version better
+---
 
-filters page =
+###  Roles
 
-- add more filters (more options than only cuisine type)dollar sign, rating
-- search feature (after MVP)
+* **Developers:** 7 team members
+* **Designers:** 3 team members
+* **Leads:** Kevin & Evan (will support both design and dev tasks)
 
-tinder page =
+---
 
-- add more button (save it for later/ maybe button),
-- click card = flip card (see details)
-- shuffle button/ reset button
+##  Breakout Room Notes
 
-deck page =
+### Developer Breakout
 
-- second version better
+* **General**:
 
-### Designer Breakout Room
+  * Ensure mobile responsiveness in design
+* **Landing Page**:
 
-- Cass and Kevin
-- Discussed the roles and responsibilities for Designers
-    - Designing UI/UX, but not in code (could move to code if done with all tasks)
-    - Developing user journey (flow chart)
-    - Reviewing frontend work on GitHub
-- Discussed roadmap
-    - Immediate tasks: Start brainstorming fonts, colors
-    - Look into user journey
-    - Do planning on same Miro Board
+  * First design iteration preferred
+* **Filters Page**:
+
+  * Add more filter options (e.g., dollar signs, rating)
+  * Consider adding search (post-MVP)
+* **Tinder Page**:
+
+  * Add "Save for Later" or "Maybe" button
+  * Tap card = flip for details
+  * Include shuffle/reset button
+* **Deck Page**:
+
+  * Second design version preferred
+
+---
+
+### Designer Breakout
+
+* **Participants**: Cass & Kevin
+* Discussed design responsibilities:
+
+  * UI/UX design (non-coding unless bandwidth allows)
+  * Create user journey flowcharts
+  * Review frontend PRs
+* Immediate design tasks:
+
+  * Brainstorm fonts and color palette
+  * Begin drafting user journey
+  * Collaborate via shared Miro board
+
