--- a/admin/meetings/team/06-02.md
+++ b/admin/meetings/team/06-02.md
@@ -1,66 +1,82 @@
-# 🏁 Sprint Planning Meeting Notes (06/02)
-
-- **Date:** 06/02/2025
-- **Time:** 8:00 pm
-- **Location:** Zoom
-- **Attendees:** Evan, Kevin, Kalkin, Nathan, Kate, Harry, Josh, Thomas, Harrison, Cass, Ethan
-- **Sprint Duration:** 6/2-6/8
+Here’s your updated meeting notes document with all emojis removed and the formatting made consistent and clean for professional presentation:
 
 ---
 
-## **Sprint Goal**
+# Team Meeting Notes (06/02/2025)
 
-- announcement
-- task discussion and planning
+---
+
+## Meeting Info
+
+* **Date:** 06/02/2025
+* **Time:** 8:00 PM
+* **Location:** Zoom
+* **Attendees:** Evan, Kevin, Kalkin, Nathan, Kate, Harry, Josh, Thomas, Harrison, Cass, Ethan
+* **Sprint Duration:** 06/02 – 06/08
+
+---
+
+## Sprint Goal
+
+* Announcements
+* Task discussion and sprint planning
+
+---
 
 ## Announcements
 
-**Meeting Agenda – Final Interviews & End-of-Quarter Tasks**
+### Final Interviews & End-of-Quarter Tasks
 
-- **Final Interviews**
-    - Interviews will be held **Thursday–Sunday**
-    - Each team member will have a **5–10 minute** online interview
-    - **Action item**: Send me a **1–2 hour block** where your whole team is available (Thursday–Sunday)
-        - This helps avoid assigning random times
-    - Scheduling Sheet (step 1):
-        
-        [Team availability sheet](https://docs.google.com/spreadsheets/d/1WUAy_OwvCzZf9ejyLrdamWRXZMetk7RkkecO-lZx0nk/edit?usp=sharing)
-        
-    - Once teams choose a time block, individuals will sign up for their own 5-minute slot within it
-    - Interviews will be relaxed and informal — just a check-in to confirm contributions
-    - We currently have June 8, 3pm-4pm lcoked in
-- **Final Project Video – Public Version**
-    - **Due: June 10 @ 11:59 PM**
-    - Length: **Max 3:30 minutes**
-    - Content:
-        - Team name & number
-        - Demo of your product (highlight key features!)
-        - Project retrospective (challenges, wins, lessons learned)
-        - Fun/hijinks from the quarter
-        - Advice for future CSE 110 students
-    - Upload to **YouTube**
-        - Add link to your **repo README**
-        - Submit link on **Gradescope**
-- **Final Project Video – Private Version**
-    - **Due: June 10 @ 11:59 PM**
-    - Length: **<10 minutes**, informational and unpolished is fine
-    - Content:
-        - Team name & number
-        - How to run your project (include a readme and onboard.md if needed)
-        - Repo tour + build demo
-        - Honest Agile retrospective
-        - What the next team should do/improve
-    - Upload to **YouTube**
-        - Add link to **repo README**
-        - Submit link on **Gradescope**
-- **PR Reviews (Optional for Bonus Points)**
-    - Review open PRs (especially ones with no reviews yet)
-    - 1–2 points per reviewed PR
-- **Close unused PRs, branches, and issues**
+#### Final Interviews
 
----
+* Interviews will be held **Thursday–Sunday**
+* Each team member will have a **5–10 minute** online interview
+* **Action item:** Send Evan a **1–2 hour block** when your entire team is available (between Thursday–Sunday)
 
----
+  * This avoids random assignments
+* Step 1: Fill out the team availability sheet
+  [Team Availability Sheet](https://docs.google.com/spreadsheets/d/1WUAy_OwvCzZf9ejyLrdamWRXZMetk7RkkecO-lZx0nk/edit?usp=sharing)
+* Once team blocks are selected, individuals will choose a 5-minute slot
+* Interviews will be informal and just a contribution check-in
+* We currently have June 8, 3:00–4:00 PM locked in
+
+#### Final Project Video – Public Version
+
+* **Due:** June 10 @ 11:59 PM
+* **Max length:** 3:30 minutes
+* **Contents:**
+
+  * Team name & number
+  * Product demo with key features
+  * Retrospective: challenges, wins, lessons learned
+  * Fun/hijinks from the quarter
+  * Advice to future CSE 110 students
+* Upload to **YouTube**
+
+  * Add link to your **repo README**
+  * Submit link on **Gradescope**
+
+#### Final Project Video – Private Version
+
+* **Due:** June 10 @ 11:59 PM
+* **Max length:** 10 minutes
+* **Contents:**
+
+  * Team name & number
+  * How to run the project (include README/onboard.md)
+  * Repo walkthrough and build demo
+  * Agile retrospective
+  * Suggestions for the next team
+* Upload to **YouTube**
+
+  * Add link to your **repo README**
+  * Submit link on **Gradescope**
+
+#### PR Reviews (Optional Bonus)
+
+* Review open PRs (especially those without reviewers)
+* Earn 1–2 extra points per quality review
+* Close unused PRs, branches, and issues
 
 ---
 
@@ -68,24 +84,35 @@
 
 ### Immediate Tasks
 
-- **Fix all bugs by EOD today (Monday, June 2)**
-- **Complete all remaining sprint tasks from last week by Tuesday, June 3**
+* Fix all bugs by end of day **Monday, June 2**
+* Complete all remaining sprint tasks from last week by **Tuesday, June 3**
 
 ---
 
-### UI Updates (Code Implementation) (Optional)
+## Weekly Tasks (Optional for Extra Points)
 
-| **Feature** | **Details** | **Justification** | Points | Asignee |
-| --- | --- | --- | --- | --- |
-| **Remove the filter choice page
+| **Feature**                                                         | **Details**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | **Justification**                                                                               | **Points**                   | **Assignee** |
+| ------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------- | ---------------------------- | ------------ |
+| **Add E2E Testing**<br>(Complete this before other tasks)           | Use Puppeteer ([PR #168](https://github.com/cse110-sp25-group25/cse110-sp25-group25/pull/168))                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Ensures full functionality is working                                                           | 6                            | Evan         |
+| **Remove Filter Choice Page**<br>(Complete this before other tasks) | Skip the intermediate screen and go straight to cuisine filters                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | Improves user flow and UX                                                                       | 4                            | Kalkin       |
+| **Add Homepage Link to Navbar Logos**                               | Add hyperlinks to homepage on all navbar logos                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Allows users to return home easily                                                              | 1                            | Cass         |
+| **Landing Page (Mobile-Friendly)**                                  | Reformat for mobile view, optionally allow card flipping                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | Fixes cropping issues and enhances usability                                                    | 4                            | Thomas       |
+| **Budget Filter UI**                                                | Replace numeric range with simplified `$`, `$$`, `$$$` buttons                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Easier for users to understand and use                                                          | 5                            | Kate         |
+| **Minimum Rating Filter UI**                                        | Improve UI for selecting minimum star rating                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | Helps users filter better based on expectations                                                 | 5                            | Harrison     |
+| **UI/UX Minor Fixes**                                               | - Remove swiping arrows<br>- Add homepage instructions<br>- Add homepage link to logos<br>- Add filter progress indicator<br>- Update favicon and page titles<br><br>**Homepage Instructions Example:**<br>FoodFlip is a restaurant recommendation app where users can swipe through restaurant cards and save them to their own collections.<br><br>• Start on the Landing page with a featured card<br>• Choose between “Pick Random” or “Choose Filters”<br>• In Filters, select by budget, distance, etc.<br>• Swipe through cards and save with ✔️ or skip with ❌<br>• View all saved cards in Collections<br>• Click a card to see more details | Arrows not used; homepage instructions improve onboarding; favicon and titles improve SEO       | 10 total (1 + 1 + 4 + 3 + 1) | Cass         |
+| **Live Data Fetching (Jupyter Notebook)**                           | Use a script to automate restaurant data export into `.json`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | Streamlines workflow; avoids manual editing                                                     | 6                            | Harry        |
+| **PR Reviews**                                                      | Pull latest commit from the PR branch and:<br>- Run end-to-end tests<br>- Check functionality and UX<br>- Review code quality (naming, styling, logic)<br>- Avoid hardcoded or static values<br>- Close unused PRs if confirmed<br>- Leave helpful, respectful comments                                                                                                                                                                                                                                                                                                                                                                               | Optional task for bonus points. Focus on PRs without any reviews. Each review earns 1–2 points. | 1–2 each                     | Open to all  |
 
-(DO THIS FIRST before other task)** | go straight to the cuisine filters when we come to the filters page | better UX | 4 |  |
-| **Landing Page** | Reformat for mobile view; optionally allow cards to flip | Eliminates weird cropping; improves usability by previewing card details | 4 |  |
-| **Budget Filter** | Replace price ranges with labeled approximation buttons (e.g., "$", "$$", "$$$") | Simplifies decision making; improves clarity | 5 |  |
-| **Minimum Rating Filter** | Add a filter for minimum star rating | Helps users only see restaurants that meet their expectations | 5 |  |
+---
 
-![image.png](attachment:61d5078d-a643-4c61-ab62-4f487565158b:image.png)
 
-![image.png](attachment:44220eae-ab07-474f-8e48-b9c68c67d228:image.png)
 
-![image.png](attachment:57784b7a-227f-416c-844b-2eaa69a52197:image.png)
+---
+
+### Image References (from original document)
+
+[Miro Board](https://miro.com/app/board/uXjVI-bk2XA=/?inviteKey=RDdMVUtRc2NhbXFVM1lwUjRObHVhell5d1pqdnNlVjRSS3JGWDVVekYvd25xNHUrOHB1UXBkVTZFNmhOaVhESWpXSzFsVUpJRjR5d3FxSmYrcTNQU3JOcklieE15L21WUmRDaVg1OUJ0N0J6bEJJdHBrYVhKVWxIQVZVZzN0c1VBS2NFMDFkcUNFSnM0d3FEN050ekl3PT0hdjE%3D)
+
+---
+
+
